Create structure for modal

--- a/src/block/editor.scss
+++ b/src/block/editor.scss
@@ -5,11 +5,51 @@
  * which makes it higher in priority.
  */
 
-.wp-block-cgb-block-modal-block  {
-  background: $green;
-  border: 0.2rem solid $black;
-  color: $black;
+.components-panel fieldset {
+	width: 100%;
+}
+
+.blocks-base-control__label {
+	margin-bottom: 12px;
+}
+
+
+.wp-block[data-type="scc/modal-container"] > .block-editor-inner-blocks  {
+  background: $gray;
   margin: 0 auto;
-  max-width: 740px;
-  padding: 2rem;
+  padding: 1rem;
+
+	.block-editor-block-list__layout {
+
+		> *:first-child {
+			margin-top: 0;
+		}
+
+		> *:last-child {
+			margin-bottom: 0;
+		}
+	}
+}
+
+.wp-block[data-type="scc/modal-info"] {
+
+	> .block-editor-inner-blocks {
+		margin: 0 auto;
+		padding: 1rem;
+	}
+}
+
+.wp-block[data-type="scc/modal-popup"] {
+	display: none;
+
+	> .block-editor-inner-blocks {
+		background-color: $white;
+		margin: 0 auto;
+		padding: 1rem;
+	}
+}
+
+.wp-block.is-selected[data-type="scc/modal-container"] .wp-block[data-type="scc/modal-popup"],
+.wp-block.has-child-selected[data-type="scc/modal-container"] .wp-block[data-type="scc/modal-popup"] {
+	display: block;
 }
