--- a/src/block/style.scss
+++ b/src/block/style.scss
@@ -4,11 +4,9 @@
  * CSS for both Frontend+Backend.
  */
 
-.wp-block-cgb-block-modal-block  {
-  background: $red;
-  border: 0.2rem solid $black;
-  color: $black;
-  margin: 0 auto;
-  max-width: 740px;
-  padding: 2rem;
+.wp-block-scc-modal-block  {
+
+	.scc-modal-block__popup {
+		display: none;
+	}
 }
